--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>Terminal of Avem</title>
     </head>
     <body>
-        <canvas id="screen" width="600px" height="600px"></canvas>
+        <canvas class="screen" width="900px" height="700px"></canvas>
         <script src="/scripts/jquery-2.1.4.min.js"></script>
         <script src="/scripts/canvas.js"></script>
     </body>
