--- a/index.html
+++ b/index.html
@@ -2,13 +2,17 @@
 <html>
     <head>
         <meta charset=utf-8>
-        <meta name="viewport" content="width=decive-width, initial-scale=1.0,user-scalable=no, minimal-ui"/>
+		<meta name=”viewport” content=”width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no”/>
+		<!-- <meta name="apple-mobile-web-app-capable" content="yes"/> -->
         <link rel="stylesheet" type="text/css" href="/css/animation.css"/>
         <link rel="stylesheet" type="text/css" href="/css/canvas.css"/>
         <title>Terminal of Avem</title>
     </head>
     <body>
+		<div class="label">123</div>
         <canvas class="screen" width="900px" height="700px"></canvas>
+		<div class="label">123</div>
+
         <script src="/scripts/jquery-2.1.4.min.js"></script>
         <script src="/scripts/canvas.js"></script>
     </body>
