--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset=utf-8>
 		<meta name=”viewport” content=”width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no”/>
 		<!-- <meta name="apple-mobile-web-app-capable" content="yes"/> -->
-        <link rel="stylesheet" type="text/css" href="/css/animation.css"/>
-        <link rel="stylesheet" type="text/css" href="/css/canvas.css"/>
+        <link rel="stylesheet" type="text/css" href="css/animation.css"/>
+        <link rel="stylesheet" type="text/css" href="css/canvas.css"/>
         <title>Terminal of Avem</title>
     </head>
     <body>
@@ -13,7 +13,7 @@
         <canvas class="screen" width="900px" height="700px"></canvas>
 		<div class="label">123</div>
 
-        <script src="/scripts/jquery-2.1.4.min.js"></script>
-        <script src="/scripts/canvas.js"></script>
+        <script src="scripts/jquery-2.1.4.min.js"></script>
+        <script src="scripts/canvas.js"></script>
     </body>
 </html>
