--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
         <title>Terminal of Avem</title>
     </head>
     <body>
-		<div class="label">123</div>
+		<!-- <div class="label">123</div> -->
         <canvas class="screen" width="900px" height="700px"></canvas>
-		<div class="label">123</div>
+		<!-- <div class="label">123</div> -->
 
         <script src="scripts/jquery-2.1.4.min.js"></script>
         <script src="scripts/canvas.js"></script>
